trustxforwarded=true so that Heroku shows the public IP

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,3 +1,4 @@
+# w
 # This is the main configuration file for the application.
 # ~~~~~
 
@@ -57,3 +58,5 @@ logger.play=INFO
 logger.application=DEBUG
 
 ehcacheplugin=disabled
+
+trustxforwarded=true
